--- a/composer.json
+++ b/composer.json
@@ -10,13 +10,13 @@
         "laravel",
         "rest"
     ],
-    "homepage": "https://github.com/BCDH/Laravel-RESTored-eXist-Client",
+    "homepage": "https://github.com/BCDH/Laravel-eXist-db-REST-Client",
     "license": "GPL-2.0",
     "require": {
         "php" : "~5.5|~7.0",
         "illuminate/support": "5.*",
         "guzzlehttp/guzzle": "^6.2",
-        "sabre/xml": "1.4.1"
+        "sabre/xml": "~1.4"
     },
     "require-dev": {
         "phpunit/phpunit" : "4.*",
@@ -38,8 +38,7 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "1.0-dev"
+            "dev-master": "1.0.x-dev"
         }
-    },
-    "minimum-stability": "stable"
+    }
 }
